--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "5.2.*"
+        "php": ">=5.5.9",
+        "illuminate/support": "*"
     },
     "autoload": {
         "psr-0": {
